# random-stuff

./: .git-blame-ignore-revs  .gitignore  .gitmodules  README.md  dummy.spec.ts  jest.config.cjs  longest_common_subsequence.cpp  package.json  tsconfig.json
advent-of-code/2021/: CMakeLists.txt  day03.clj  day05.clj  day06-log.cpp  day06.clj  day07.clj  day08.clj  day09.clj  day1.clj  day10.clj  day11.clj  day12.clj  day13.clj  day14.clj  day15.clj  day16.clj  day17.clj  day18.clj  day19.cpp  day2.clj  day20.clj  day21.clj  day22.cpp  day24.py  day25.cpp  day4.clj  deps.edn  matrix-utils.clj
algorithms/: quick_sort.asm  shunting_yard.cpp
binarysearch/: 0-1_knapsack.cpp  broker_of_wall_street.cpp  central_linked_list.cpp  concatenated_string_of_unique_count.cpp  cream  cream.cpp  edit_distance  edit_distance.cpp  kth_last_node_ll.cpp  labyrinthian_possibilities.cpp  list_partitioning  list_partitioning.cpp  low_score.cpp  matrix_search_sequel.cpp  merging_k_sorted_lists.cpp  minimum_parsing_tree  minimum_parsing_tree.cpp  minimum_spanning_tree  minimum_spanning_tree.cpp  next_number_permutation  next_number_permutation.cpp  no_new_friends.cpp  omitted.cpp  one_edit_distance.cpp  parity_jump.cpp  sum_of_3_less_than_target  sum_of_3_less_than_target.cpp  sum_of_deepest_nodes.cpp  the_maze_runner.cpp  unival_tree_count.cpp
codeforces/: fibonacci.cpp  random_mood.cpp
common/: ccall.asm  cmp.asm  for.asm  jemalloc.asm  memset.asm  print_int.asm  syscalls.asm
cses/: apple_division.cpp  bit_strings.cpp  coin_piles.cpp  creating_strings_I.cpp  increasing_array.cpp  (+9 more)
(+381 files in other folders)
